--- a/counting_contract/.cargo/config
+++ b/counting_contract/.cargo/config
@@ -1,3 +1,3 @@
 [alias]
-wasm = "build --release --target wam32-unknown-unknown"
-wasm-debug = "build --target wasm32-unknown-unknown"s
+wasm = "build --release --target wasm32-unknown-unknown"
+wasm-debug = "build --target wasm32-unknown-unknown"
